# 42-Webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: multipleServer.conf  routing.conf  sage.conf  siege.conf  temp.conf  uploadCgi.conf  webserv.conf
inc/: webserv.hpp
inc/cgi/: Argc.hpp  Cgi.hpp  CgiHandler.hpp  Envp.hpp
inc/config/: DirectiveTypeTraits.hpp  Line.hpp  LocationOpts.hpp  Options.hpp  Parser.hpp  ServerOpts.hpp  directives.hpp
inc/config/blocks/: block.hpp  route.hpp
inc/config/directives/: Listen.hpp
inc/http/: ErrorCode.hpp  Handler.hpp  Request.hpp  Response.hpp  Uri.hpp  methods.hpp
inc/options/: Options.hpp  ServerOpts.hpp
inc/server/: Middleware.hpp  Server.hpp
inc/sockets/: ServerSocket.hpp  SocketConnection.hpp
inc/utils/: FileSystem.hpp  Host.hpp  Logger.hpp  ft_exceptions.hpp  ft_filesystem.hpp  ft_string.hpp  smt.hpp  string.hpp
includes/cgi/: Argc.hpp  Argv.hpp  CgiHandler.hpp  Envp.hpp
includes/config/: DirectiveTypeTraits.hpp  Line.hpp  Options.hpp  Parser.hpp  ServerOpts.hpp
includes/http/: Handler.hpp  MimeType.hpp  Request.hpp  RequestBuffer.hpp  Response.hpp  Uri.hpp  methods.hpp
includes/server/: Middleware.hpp  Server.hpp
includes/sockets/: SocketConnection.hpp
includes/utils/: ErrorCode.hpp  Host.hpp  Logger.hpp  Route.hpp  ft_array.hpp  ft_string.hpp  smt.hpp
src/: CMakeLists.txt  main.cpp
src/cgi/: Argc.cpp  Cgi.cpp  CgiHandler.cpp  CgiHandler.cpp.tmp  Envp.cpp  Envp.cpp.tmp
src/config/: DirectiveTypeTraits.cpp  Line.cpp  LocationOpts.cpp  Options.cpp  Parser.cpp  ServerOpts.cpp  directives.cpp
src/config/blocks/: block.cpp  route.cpp
src/config/directives/: Listen.cpp
src/http/: Handler.cpp  MimeType.cpp  Request.cpp  Response.cpp  Uri.cpp  methods.cpp
src/options/: LocationOpts.cpp  ServerOpts.cpp
src/server/: Middleware.cpp  Server.cpp  webserv.cpp
src/sockets/: ServerSocket.cpp  SocketConnection.cpp
src/utils/: FileSystem.cpp  Logger.cpp  Route.cpp  ft_array.cpp  ft_exceptions.cpp  ft_filesystem.cpp  ft_string.cpp  string.cpp
srcs/: CMakeLists.txt  main.cpp
srcs/cgi/: Argc.cpp  Argv.cpp  CgiHandler.cpp  Envp.cpp
srcs/config/: DirectiveTypeTraits.cpp  Line.cpp  LocationOpts.cpp  Options.cpp  Parser.cpp  ServerOpts.cpp
srcs/http/: ErrorCode.cpp  Handler.cpp  Request.cpp  RequestBuffer.cpp  Response.cpp  Uri.cpp  methods.cpp
srcs/server/: Middleware.cpp  Server.cpp  webserv.cpp
srcs/sockets/: ServerSocket.cpp  SocketConnection.cpp
srcs/utils/: ErrorCode.cpp  Host.cpp  MimeType.cpp  Route.cpp  ft_array.cpp  ft_exceptions.cpp  ft_filesystem.cpp  ft_string.cpp
tests/: CMakeLists.txt  test.cpp  testArgc.cpp  testArgv.cpp  testArray.cpp  testBlocks.cpp  testCgi.cpp  testCgiHandler.cpp  testDirectives.cpp  testEnvp.cpp  testErrorCode.cpp  testFileSystem.cpp  testHost.cpp  testLine.cpp  testLogger.cpp  testMethods.cpp  testMimeType.cpp  testOptions.cpp  testParser.cpp  testRequest.cpp  testRequestBuffer.cpp  testResponse.cpp  testRoute.cpp  testServerSocket.cpp  testSmt.cpp  testSocketConnection.cpp  testString.cpp  testUri.cpp
tests/client/: Client.cpp  Client.hpp
tests/utils/: Host.cpp  Logger.cpp  ft_filesystem.cpp
websites/: index.html
websites/cgi-bin/: index.py  names.py  query.py  upload.py
websites/cgi-bin/python/: createFile.py  index.py  names.py  query.py  upload.py  you.py
websites/cgi/python/: createFile.py  index.py  me.py  names.py  test.py  upload.py
websites/errors/: 404.html  500.html
websites/static-website-example/Conferences/CHEP92/: chep92www.html
websites/static-website-example/DataSources/QWERTZ/: README.html
websites/static-website-example/DataSources/RichTextFormat/: RTF.html
websites/static-website-example/Gopher/gopher_protocol/: protocol.html
websites/static-website-example/Talk/: 60_Approach.html
websites/static-website-example/WWW/: Bibliography.html  Bugs.html  HTandCERN-2.html  HTandCERN.html  Help.html  History.html  IntroCVS.html  MarkUp.html  Newsgroups.html  Notation.html  People.html  Policy.html  Proposal.html  RelatedProducts.html  Status.html  Summary.html  Technical.html  Terms.html  TheProject.html  WhatIs.html  WorkplanECP-PT.html  external.html
websites/static-website-example/WWW/Addressing/: GopherAddressing.html  WAISAddressing.html
websites/static-website-example/WWW/Administration/: AS_WorkPlan_91.html  DataModel.html
websites/static-website-example/WWW/Architecture/: Anchors.html  BrowserControl.html  BrowserOperation.html  BrowserOverview.html  Letter_1.html  UtilityOverview.html
websites/static-website-example/WWW/Daemon/: Basic.html  Bugs.html  DCLServer.html  Features.html  JanetAndJohn.html  Overview.html  VMSHelpGate.html  WAISGate.html
websites/static-website-example/WWW/DesignIssues/: Caching.html  CompatibleProof.html  DosDonts.html  Formats.html  Function.html  FunctionTraverse.html  HTTP0.9Summary.html  LinkTypes.html  ManyIndexes.html  Multiuser.html  Navigation.html  Overview.html  Preece.html  ProtocolProblems.html  ProtocolVersions.html  Protocolcomms.html  RCcomments.html  ToBeThoughtOf.html  Topology.html
websites/static-website-example/WWW/Erwise/: Status.html
websites/static-website-example/WWW/FAQ/: Bootstrap.html  KeepingTrack.html  List.html  WAISandGopher.html
websites/static-website-example/WWW/FIND/: Bugs.html  (+3 more)
(+225 files in other folders)
